# t1

./: .cz-config.js  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.cross  LICENSE  LICENSE.md  Makefile  README.md  bun.lockb  package.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: contracts.yml  release.yml  reth.yml
contracts/: .env.example  .env.template  .gitignore  .prettierignore  .solhint.json  LICENSE.md  README.md  TUTORIAL.md  bun.lockb  deploy.sh  foundry.toml  package.json  remappings.txt
contracts/.github/workflows/: ci.yml
contracts/deployments/bridge/: chain2.json  v0.0.3.json  v0.0.4.json  v0.0.5.json  v0.0.6.json  v0.1.0.json
contracts/script/: DeployAaveMessengerAndXCallSupply.s.sol  DeployL1BridgeContracts.s.sol  DeployL1BridgeProxyPlaceholder.s.sol  DeployL1T1Owner.s.sol  DeployL1Usdt.s.sol  DeployL1Weth.s.sol  DeployL2BridgeContracts.s.sol  DeployL2BridgeProxyPlaceholder.s.sol  DeployL2T1Owner.s.sol  DeployL2Weth.s.sol  DeployT1L1MessengerMock.s.sol  DeployT1L2MessengerMock.s.sol  DeployWeth.s.sol  DepositEtherFromL1ToL2.s.sol  DepositUsdtFromL1ToL2.s.sol  DepositWethFromL1ToL2.s.sol  IWETH.sol  InitializeL1BridgeContracts.s.sol  InitializeL1T1Owner.s.sol  InitializeL2BridgeContracts.s.sol  InitializeL2T1Owner.s.sol  README.md  SupplyWethToAavePool.sol  TriggerL1CanonicalBridge.s.sol  TriggerL2CanonicalBridge.s.sol  TriggerT1L1L2MessengerMocks.s.sol  TriggerT1L1MessengerMock.s.sol  TriggerT1L2MessengerMock.s.sol  WithdrawEtherFromL2ToL1.s.sol  WithdrawUsdtFromL2ToL1.s.sol  WithdrawWethFromL2ToL1.s.sol
contracts/script/configure/: FirstUsdtDepositFromL1ToL2.s.sol  SetMM.s.sol
contracts/script/deploy/: DeployCrossChainExample.s.sol  DeployExample.s.sol  DeployL1BridgeContracts.s.sol  DeployL1BridgeProxyPlaceholder.s.sol  DeployL1T1Owner.s.sol  DeployL1Usdt.s.sol  DeployL1Weth.s.sol  DeployL2BridgeContracts.s.sol  DeployL2BridgeProxyPlaceholder.s.sol  DeployL2T1Owner.s.sol  DeployL2Weth.s.sol  DeployRouterERC7683.s.sol  DeployRouterPullBasedERC7683.s.sol  DeployXChainRead.s.sol  InitializeL1BridgeContracts.s.sol  InitializeL1T1Owner.s.sol  InitializeL2BridgeContracts.s.sol  InitializeL2T1Owner.s.sol  README.md
contracts/script/lib/: DeploymentUtils.sol
contracts/script/test/: 7683E2E.s.sol  AllowRouterToTransfer.s.sol  DepositEtherFromL1ToL2.s.sol  DepositUsdtFromL1ToL2.s.sol  DepositWethFromL1ToL2.s.sol  LogAliceBalances.s.sol  LogBalances.s.sol  LogUsdtBalances.s.sol  SendCrossChainMessageExample.s.sol  SetMM.s.sol  SwapERC20.s.sol  WithdrawEtherFromL2ToL1.s.sol  WithdrawUsdtFromL2ToL1.s.sol  WithdrawWethFromL2ToL1.s.sol
contracts/src/7683/: Base7683.sol  BasicSwap7683.sol  IERC7683.sol  L1_t1_7683.sol  L2_t1_7683.sol  t1_7683.sol  t1_7683_pull_based.sol
contracts/src/L1/: IL1T1Messenger.sol  L1T1Messenger.sol
contracts/src/L2/: IL2T1MessageVerifier.sol  IL2T1Messenger.sol  L2T1MessageVerifier.sol  L2T1Messenger.sol
contracts/src/interfaces/: IWETH.sol
contracts/src/libraries/: IT1Messenger.sol  T1MessengerBase.sol
contracts/src/misc/: EmptyContract.sol  IWETH.sol  T1Owner.sol
contracts/src/mocks/: T1ChainMockBlob.sol  T1L1MessengerMock.sol  T1MessengerMock.sol
contracts/src/test/: L1CustomERC20Gateway.t.sol  L1ETHGateway.t.sol  L1GasPriceOracle.t.sol  L1GatewayRouter.t.sol  L1GatewayTestBase.t.sol  L1MessageQueue.t.sol  (+23 more)
docker-compose/: README.md  compose.yml  docker-compose.yml
docker-compose/blockscout/: compose.yml
docker-compose/reth/: compose.yml
e2e/: .env.sample  .gitignore  README.md  jest.config.ts  package.json  tsconfig.json
e2e/src/: bridge-tokens.spec.ts  bridge-usdt.spec.ts
etc/: generate-jwt.sh
offchain/: README.md  package-lock.json  package.json  tsconfig.json
offchain/src/: merkle.ts
offchain/test/: merkle.test.ts
reth/: Cargo.toml  Dockerfile.cross  Makefile  README.md
reth/abi/: counter_abi.json  state_root_abi.json
reth/etc/: docker-compose.yml
reth/etc/network-configs/: genesis.json
reth/src/: main.rs
scripts/: bump-version.js
src/: main.rs
t1-reth-full/etc/: env.tmp
utils/: README.md  gcp_setup.sh  generate_wallets.sh  github-app-credential-helper  install-github-app-credential-helper.sh  setup.sh
utils/gcp/: github-app-credential-helper
utils/reth-healthcheck/: Cargo.toml
(+105 files in other folders)
