[package]
name = "t1-reth"
version = "0.0.6"
edition = "2021"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }

# misc
eyre = "0.6"

# async
futures = "0.3"

[dev-dependencies]
# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.3.4" }
tokio = "1.43"